Did some changes related to the footer and other  layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -255,7 +255,6 @@ header {
 }
 
 
-
 .grid2, .grid3, .grid4 {
     display: flex;
     flex-direction: row;
@@ -266,7 +265,7 @@ header {
     margin: 10px 0;
 }
 
-.grid2 > div {
+.grid1 > div, .grid2 > div {
     border: 1px solid #ccc;
     border-radius: 5px;
     padding: 16px;
@@ -274,6 +273,10 @@ header {
 }
 
     .grid2 > div.second {
+        display: none;
+    }
+
+    .desktop-only {
         display: none;
     }
 
@@ -577,6 +580,10 @@ fieldset {
         display: none;
     }
 
+    .desktop-only {
+        display: none;
+    }
+
     header > nav > ul > li {
         display: inline-block;
         padding: 1rem 2rem;
@@ -604,7 +611,9 @@ fieldset {
     .grid2 > div.second {
         display: none;
     }
-
+    .desktop-only {
+        display: none;
+    }
     #contact input[type="text"], #contact input[type="email"], #contact input[type="tel"], #contact input[type="url"], #contact textarea {
         width: 97.5%;
     }
@@ -642,6 +651,9 @@ fieldset {
             width: 100%;
         }
 
+    .desktop-only{
+        display: block;
+    }
     #contact input[type="text"], #contact input[type="email"], #contact input[type="tel"], #contact input[type="url"], #contact textarea {
         width: 98%;
     }
